<resources>
    <string name="app_name">mUzima</string>
    <string name="homepage">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_load">Load</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_search">Search</string>
    <string name="menu_client_add">Register client</string>
    <string name="menu_download">Download</string>
    <string name="menu_delete">Delete</string>
    <string name="search_clients">Search Clients</string>
    <string name="search_observations">Search Observations</string>
    <string name="register_new_client">Register Client</string>
    <string name="view_encounters">View Encounters</string>
    <string name="cohorts">Cohorts</string>
    <string name="observations">Observations</string>
    <string name="clients">Clients</string>
    <string name="forms">Forms</string>
    <string name="notices">Notices</string>
    <string name="encounters">Encounters</string>
    <string name="observation_value_lbl">Observation value:</string>
    <string name="observation_value_lbl_hint">Obs Value</string>
    <string name="observation_datetime_lbl">Observation date</string>
    <string name="observation_datetime_lbl_hint">Observation Datetime:</string>
    <string name="observation_reason_lbl">Reason:</string>
    <string name="observation_reason_lbl_hint">Reason for  editing</string>
    <string name="observation_edit">Edit</string>
    <string name="no_new_form_msg">No Forms Available</string>
    <string name="no_new_form_tip">Please press load to fetch data from server</string>
    <string name="no_downloaded_form_msg">No Forms Have Been Downloaded</string>
    <string name="no_recommended_form_msg">No Forms Have Been Downloaded</string>
    <string name="no_downloaded_form_tip">Please select forms from all forms list and click download</string>
    <string name="no_recommended_form_tip">Please select non registration forms from all forms list and click download
    </string>
    <string name="no_incomplete_form_msg">No Incomplete Forms On Device</string>
    <string name="no_incomplete_client_form_msg">No Incomplete Forms</string>
    <string name="no_incomplete_form_tip">Incomplete forms are available only if you have saved a partially filled
        form
    </string>
    <string name="no_complete_form_msg">No Completed And Unsynced Forms On Device</string>
    <string name="no_complete_client_form_msg">No Completed And Unsynced Forms</string>
    <string name="no_complete_form_tip">Complete Forms are available only if you have filled a form completely but have
        not synced it with the server
    </string>
    <string name="no_synced_form_msg">No Forms Have Been Synced Yet</string>
    <string name="no_synced_form_tip">Please press sync button to sync completed forms with server</string>
    <string name="sync_in_progress_msg">Action not allowed while sync is in progress</string>
    <string name="already_fetching_forms_msg">Already fetching forms, ignored the request</string>
    <string name="already_uploading_forms_msg">Already fetching forms, ignored the request</string>
    <string name="no_connection_found_msg">No connection found, please connect your device and try again</string>
    <string name="already_exists_selected_forms_with_patient_data_msg">There is existing form data for selected form(s).
        Finish Incomplete data and sync Complete data to Server first before downloading the forms.</string>
    <string name="already_exists_some_forms_with_patient_data_msg">There is existing form data.
        Finish Incomplete data and sync Complete data to Server first before syncing form templates.</string>
    <string name="no_cohorts_available">No Cohorts Available</string>
    <string name="no_cohorts_available_tip">Please press load to fetch available cohorts list from server</string>
    <string name="no_cohorts_synced">No Cohorts Have Been Synced</string>
    <string name="no_cohorts_synced_tip">Please select cohorts from all cohorts list and click sync</string>
    <string name="no_clients_downloaded">No clients have been downloaded</string>
    <string name="no_clients_downloaded_tip">Please select cohorts from all cohorts list and click sync to download
        clients
    </string>
    <string name="no_clients_matched_locally">No clients matched your search locally. Enter at least 3 characters for
        remote search.
    </string>
    <string name="no_clients_matched_tip_locally">Your search includes client id, given name, middle name and family
        name and searched only in the device
    </string>
    <string name="no_clients_matched_remotely">No clients matched your search on server</string>
    <string name="no_clients_matched_tip_remotely">Your search includes client id, given name, middle name and family
        name and searched only in the device
    </string>
    <string name="no_encounters_available">No Encounters Available</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload_editted_obs">Upload Obs</string>
    <string name="hello_world">Hello world!</string>
    <string name="client_search">Search Name or ID</string>
	<string name="client_scan">Scan Clients ID</string>
    <string name="observation_search">Search Observations</string>
    <string name="title_activity_client_list">Clients</string>
    <string name="title_activity_cohort_list">Cohorts</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_register_client">Register Client</string>
    <string name="title_activity_sync">Sync</string>
    <string name="title_activity_form_list">Forms</string>
    <string name="title_activity_clients_list">Clients</string>
    <string name="title_activity_form_webview">Form</string>
    <string name="title_activity_notice_list">Notice List</string>
    <string name="title_activity_client_summary">Client Summary</string>
    <string name="title_activity_client_observations">Client Observations</string>
    <string name="title_activity_client_encounters">Client Encounters</string>
    <string name="title_activity_encounter_summary">Observations</string>
    <string name="title_login">Please Log In</string>
    <string name="title_activity_cohort_pref">Cohort Prefixes</string>
    <string name="textview_login_username">Username:</string>
    <string name="textview_login_password">Password:</string>
    <string name="button_login">Log In</string>
    <string name="button_logout">Log Out</string>
    <string name="title_logout">Log Out:</string>
    <string name="textview_sync_device">Sync Device</string>
    <string name="textview_logout">Log Out:</string>
    <string name="textview_formlist_title">Form List:</string>
    <string name="textview_formlist_blank_forms">Blank Forms</string>
    <string name="textview_formlist_incomplete_forms">Incomplete Forms:</string>
    <string name="radio_button_register_male">Male</string>
    <string name="radio_button_register_female">Female</string>
    <string name="textview_register_given_name">Given:</string>
    <string name="textview_register_middle_name">Middle:</string>
    <string name="textview_register_family_name">Family:</string>
    <string name="textview_register_birthdate">Birthdate:</string>
    <string name="textview_register_birthdate_format">dd/mm/yyyy:</string>
    <string name="textview_register_identifier">Identifier:</string>
    <string name="textview_register_client_identifier">Client Identifier:</string>
    <string name="drawer_open">Tags drawer open</string>
    <string name="drawer_close">Tags drawer close</string>
    <string name="drawer_title">Tags</string>
    <string name="tags_no_data">No Tags Available</string>
    <string name="preference_disclaimer">disclaimer</string>
    <string name="preference_server_title">Server</string>
    <string name="preference_server_desc">Enter the OpenMRS Server</string>
    <string name="preference_server">serverPreference</string>
    <string name="preference_timeout_title">Timeout</string>
    <string name="preference_timeout_desc">Enter the value in minutes</string>
    <string name="preference_timeout">timeoutPreference</string>
    <string name="preference_auto_save_interval_desc">Enter the value in minutes</string>
    <string name="preference_auto_save_interval_title">Automatic form save interval</string>
    <string name="preference_auto_save_interval">autoSaveIntervalPreference</string>
    <string name="default_auto_save_interval_value">2</string>
    <string name="preference_username">usernamePreference</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_desc">Enter the OpenMRS username</string>
    <string name="preference_password_title">Password</string>
    <string name="preference_password_desc">Enter the OpenMRS password</string>
    <string name="preference_password">passwordPreference</string>
    <string name="preference_cohort_title">Add cohort prefixes</string>
    <string name="preference_cohort_desc">You can add multiple cohort prefixes to restrict the cohort downloads.</string>
    <string name="preference_category_openmrs">OpenMRS Settings</string>
    <string name="preference_category_muzima">Muzima Settings</string>
    <string name="preference_category_provider_location">Provider/Location Settings</string>
    <string name="preference_category_cohorts">Cohort Settings</string>
    <string name="preference_category_provider">Provider Settings</string>
    <string name="preference_add_provider_title">Add provider(s)</string>
    <string name="preference_add_provider_desc">You can add provider(s) to display in your forms.</string>
    <string name="preference_cohorts_prefix_desc">Enter cohort prefixes</string>
    <string name="preference_cohort_prefix">cohortPrefixesPreference</string>
    <string name="preference_real_time_sync_summary">Enable real time synchronization of complete form data</string>
    <string name="preference_real_time_sync_title">Real time sync</string>
    <string name="preference_real_time_sync">realTimeSyncPreference</string>
    <string name="add_cohort_prefixes">Step 1: Add Cohort Prefix</string>
    <string name="download_cohort">Step 1: Download Cohort(s)</string>
    <string name="download_form">Step 2: Download Form Template(s)</string>
    <string name="add_location_prefixes">Step 3: Add Location(s)</string>
    <string name="add_concept_prefixes">Step 5: Add Concept(s)</string>
    <string name="add_provider_prefixes">Step 4: Add Provider(s)</string>
    <string name="check_barcode_scanner_header">Step 6: Check for BarCode Scanner</string>
    <string name="no_cohort_prefixes_added">No Cohort Prefixes Added</string>
    <string name="no_cohort_prefixes_msg">Please click on add button to add a cohort prefix</string>
    <string name="cohort_prefix_label">Prefix:</string>
    <string name="cohort_add_prefix_hint">Add Prefix</string>
    <string name="observations_still_loading">Observations are still loading</string>
    <string name="no_observations_available">No Observations Available</string>
    <string name="preference_form_title">Add form tags</string>
    <string name="preference_form_desc">You can add form tags to restrict the form downloads.</string>
    <string name="title_activity_form_tag">Form Tags</string>
    <string name="add_form_tags">Add Form Tags</string>
    <string name="form_add_tag_hint">Add Tags</string>
    <string name="no_form_tags_added">No Form Tags Added</string>
    <string name="title_activity_concept_pref">Concepts</string>
    <string name="title_activity_location_pref">Locations</string>
    <string name="form_submit">Save</string>
    <string name="cancel">Cancel</string>
</resources>